unpackaged/objects/SSR_Academic_Coursework__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_End__c</fullName>
        <label>Dates of Study (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_Start__c</fullName>
        <label>Dates of Study (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade_Received__c</fullName>
        <label>Grade Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Science_Research__c</fullName>
        <label>Summer Science Research</label>
        <referenceTo>Summer_Science_Research__c</referenceTo>
        <relationshipLabel>SSR Academic Courseworks</relationshipLabel>
        <relationshipName>SSR_Academic_Courseworks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SSR Academic Coursework</label>
    <nameField>
        <displayFormat>SSRAC-{0000000000}</displayFormat>
        <label>SSR Academic Coursework ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSR Academic Courseworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>